@startuml

class Identifier {
  uuid : UUID
}
class Category {
  value : String
}
class Tag {
  value : String
}
class Timestamp {
  timestamp : Instant
}
class Subject {
  value : String
  identifier : Identifier
}
class Event {
  value : String
  tags : List<Tag>
  identifier : Identifier
  timestamp : Timestamp
}
class Note {
  value : String
  tags : List<Tag>
  identifier : Identifier
  timestamp : Timestamp
}

Subject "0..*" -- "1" Category : has
Event "0..*" -- "1" Subject : has
Note "0..*" -left- "1" Subject : has
Note "0..*" -down- "0..1" Event : has
@enduml
